Add basic layout and styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Michael Leadley</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Zilla+Slab">
   </head>
   <body>
-    <h1>Michael Leadley</h1>
+    <div id="flex-wrapper">
+      <nav>
+
+      </nav>
+      <div id="title">
+        Michael Leadley
+      </div>
+      <footer>
+
+      </footer>
+    </div>
   </body>
 </html>
