Add nav links and styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div id="flex-wrapper">
       <nav>
-
+        <a href="">CODE</a>
+        <a href="">SOUNDS</a>
+        <a href="">SIGHTS</a>
+        <a href="">WORDS</a>
       </nav>
       <div id="title">
         Michael Leadley
