Add random colourful triangle background!

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <body>
     <div id="flex-wrapper">
       <nav>
-        <a href="">CODE</a>
-        <a href="">SOUNDS</a>
-        <a href="">SIGHTS</a>
-        <a href="">WORDS</a>
+        <a href="https://github.com/mleadley">CODE</a>
+        <a href="https://soundcloud.com/leadley">MUSIC</a>
+        <!-- <a href="">SIGHTS</a> -->
+        <!-- <a href="">WORDS</a> -->
       </nav>
       <div id="title">
-        Michael Leadley
+        <a href="">Michael Leadley</a>
       </div>
       <footer>
 
       </footer>
     </div>
+    <canvas id="background"></canvas>
+    <script src="Delaunator.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
